2000-02-08  Akim Demaille  <akim@epita.fr>

	It seems quite delicate to have AC_INCLUDES_DEFAULT insert the
	default headers in the INIT section of configure: the reason is
	that AC_INCLUDES_DEFAULT is called unquoted, and this results in
	an un expected behavior.  Thanks to Roman V. Shaposhnick for the
	details.

	The current implementation is not satisfying: the default headers
	are defined in the INIT section even if they are not used.

	* acgeneral.m4 (Prologue of AC_INCLUDES_DEFAULTS): Dump the
	definition of ac_includes_default in the INIT section of
	configure.
	(AC_INCLUDES_DEFAULTS): Use it.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* TODO: Updated.
	* THANKS: Updated.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* libm4.m4 (m4_for): New macro.

2000-02-07  Akim Demaille  <akim@epita.fr>

	Stay in Autoconf's name space.

	* acspecific.m4 (AC_F77_LIBRARY_LDFLAGS): Prefixed with 'ac_':
	arg, save_arg, i, seen, previous_arg, ld_run_path.
	Renamed f77_link_output as ac_link_output.
	* tests/actest.m4 (AC_ENV_SAVE): Don't note F77, FFLAGS, FLIBS,
	G77, f77_case, f77_underscore.

2000-02-07  Akim Demaille  <akim@epita.fr>

	Use `#' for comments instead of `dnl'.
	Better highlighting of the sections in the sources.

	* acgeneral.m4: Formatting changes.
	* acspecific.m4: Likewise.
	* autoheader.m4: Likewise.
	* acoldnames.m4: Likewise.

2000-02-07  Akim Demaille  <akim@epita.fr>

	Create libm4.m4.

	* Makefile.am: Adjusted for libm4.m4.

	* acgeneral.m4 (m4_errprint, m4_warn, m4_fatal, m4_prefix,
	m4_eval, m4_shift, m4_format, m4_include_unique, m4_include,
	m4_sinclude, m4_quote, m4_split, m4_join, m4_strip, m4_append,
	m4_list_append, ifval, ifset, m4_default, m4_case, m4_match,
	m4_foreach): Moved from here, to...
	* libm4.m4: here.
	* acgeneral.m4 (AC_WRAP): Moved from here, to...
	* libm4.m4 (m4_wrap): here.  All callers changed.

	* acgeneral.m4: Don't include acversion.m4.
	* autoconf.m4: Include libm4.m4 and acversion.m4.
	* autoheader.m4: Likewise.
